--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -8,7 +8,7 @@
     margin-bottom: 10px;
     border-radius: 5px;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 0;
 }
 
 .card:hover {
